--- a/index.html
+++ b/index.html
@@ -509,22 +509,22 @@
 
         switch (valorBotao) {
           case 20:
-            link = "https://pay.comprasegurapayy.com/checkout/c617b8de-605c-417e-a24c-3db40e2ab9f4";
+            link = "https://pay.compraseguraapayy.com/checkout/c617b8de-605c-417e-a24c-3db40e2ab9f4";
             break;
           case 30:
-            link = "https://pay.comprasegurapayy.com/checkout/d97e4fed-edeb-4e95-9a49-cc4f2dc1ebc8";
+            link = "https://pay.compraseguraapayy.com/checkout/d97e4fed-edeb-4e95-9a49-cc4f2dc1ebc8";
             break;
           case 40:
-            link = "https://pay.comprasegurapayy.com/checkout/8b748756-2da8-49cd-9991-77d937df5834";
+            link = "https://pay.compraseguraapayy.com/checkout/8b748756-2da8-49cd-9991-77d937df5834";
             break;
           case 70:
-            link = "https://pay.comprasegurapayy.com/checkout/99065f1a-3a70-4e93-8a67-a92869fdecf5";
+            link = "https://pay.compraseguraapayy.com/checkout/99065f1a-3a70-4e93-8a67-a92869fdecf5";
             break;
           case 100:
-            link = "https://pay.comprasegurapayy.com/checkout/14050738-6da0-4f8d-b821-a56a59af2944";
+            link = "https://pay.compraseguraapayy.com/checkout/14050738-6da0-4f8d-b821-a56a59af2944";
             break;
           case 200:
-            link = "https://pay.comprasegurapayy.com/checkout/be47fdff-ebfe-4bfb-9707-e6926c8053de";
+            link = "https://pay.compraseguraapayy.com/checkout/be47fdff-ebfe-4bfb-9707-e6926c8053de";
             break;
         }
 
